# git-remote-s3

./: Cargo.toml  Dockerfile.test  LICENSE  README.md
.github/workflows/: publish.yaml  release.yaml  rust.yml  test.yml
src/: git.rs  gpg.rs  main.rs  s3.rs
tests/: Dockerfile  main_test.rs  run.sh  setup_gpg.sh
