[package]
name = "git-remote-s3"
version = "0.1.4"
authors = ["Bryan Gahagan <git@bgahagan.dev>"]
edition = "2018"
license = "MIT"
description = "Push and pull git repos to/from an s3 bucket, encrypted using gpg."
repository = "https://github.com/bgahagan/git-remote-s3"
readme = "README.md"
keywords = [ "git", "aws", "S3", "gpg", "cli" ]
categories = [ "command-line-utilities", "development-tools" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.1"
itertools = "0.8.2"
tempfile = "3.1.0"
rusoto_core = { version="0.42.0", default_features=false, features=["rustls"] }
rusoto_credential = "0.42.0"
rusoto_s3 = { version="0.42.0", default_features=false, features=["rustls"] }

[dev-dependencies]
assert_cmd = "0.11"

